test/expected/lex_mixed_segments.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand ":" "predqsq$x$ypost"]
  [CompoundListCondition, None]
    [SimpleCommand ":" "a$bc$(:)d$(( 1 + 1 ))e"]
[Word
  Unquoted ":"
]
[Word
  Unquoted "pre"
  DoubleQuoted "dq"
  Literal "sq"
  Variable "x"
  Variable "y"
  Unquoted "post"
]
[Word
  Unquoted ":"
]
[Word
  DoubleQuoted "a"
  Variable "b"
  Literal "c"
  CommandSubstitution ":"
  DoubleQuoted "d"
  ArithmeticExpansion " 1 + 1 "
  DoubleQuoted "e"
]
shit: 3:3: warning: An unquoted command substitution splits its output, quote it to keep one argument.
     3 |  : "a$b"'c'$(:)"d$(( 1 + 1 ))e"
       |    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~ here.
shit: 2:3: error: Unable to expand 'x' because the parameter is not set.
     2 |  : pre"dq"'sq'$x${y}post
       |    ^~~~~~~~~~~~~~~~~~~~~ here.
